# elemate

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: check-notarization-status.yml  notarization-probe.yml  release-desktop.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: database.py  identity.py  logs.py  main.py  models.py  schemas.py  settings.py
apps/api/app/execution/: __init__.py  browser.py  codex_cli.py  config.py  live.py
apps/api/app/routes/: agents.py  browser_tools.py  chat.py  meta.py  onboarding.py  operator.py  portal.py  tailscale.py  tasks.py  workspaces.py
apps/api/app/services/: __init__.py  browser_operator.py  chat.py  onboarding.py  portals.py  tailscale.py  tasks.py
apps/api/elemate_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/desktop/: README.md  main.cjs  package.json  preload.cjs
docs/: distribution.md  personal-device-agent.md  public-site-deploy.md
scripts/: check_elemate_notary_status.sh  elemate_daemon.sh  elemate_public_site_daemon.sh  fetch_elemate_python_runtime.mjs  install_elemate_launch_agent.sh  install_elemate_public_site_launch_agent.sh  install_latest_elemate_test.sh  prepare_elemate_desktop_runtime.mjs  run_elemate_desktop.sh  run_elemate_notary_probe.sh  run_elemate_public_site.sh  setup_elemate_desktop.sh  setup_elemate_notary_profile.sh  setup_elemate_public_site.sh  setup_tailscale_serve.sh  status_elemate_launch_agent.sh  status_elemate_public_site_launch_agent.sh  uninstall_elemate_launch_agent.sh  uninstall_elemate_public_site_launch_agent.sh
(+70 files in other folders)
