[project]
name = "elemate-api"
version = "0.3.1"
description = "EleMate FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.28.0",
  "openai>=2.26.0",
  "playwright>=1.58.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
